updated code and added tests based on the sonar recommendations