@@ -8,7 +8,6 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.net.HttpURLConnection;
 import java.net.URI;
-import java.net.URL;
 import java.util.Map;
 import org.springframework.http.ResponseEntity;
 import org.springframework.validation.annotation.Validated;
@@ -25,6 +24,7 @@ import org.springframework.web.servlet.support.ServletUriComponentsBuilder;
 @RestController
 @RequestMapping("/api/products")
 class ProductController {
+    private static final String STATUS_KEY = "status";
     private final ProductService productService;
 
     ProductController(ProductService productService) {
@@ -53,7 +53,7 @@ class ProductController {
             @PathVariable String code,
             @RequestParam(value = "file", required = false) MultipartFile file,
             @RequestParam(value = "imageUrl", required = false) String imageUrl)
-            throws IOException {
+            throws IOException, InterruptedException {
         String imageName;
         InputStream inputStream;
 
@@ -69,27 +69,32 @@ class ProductController {
             // Validate imageUrl before using
             if (imageUrl == null || !imageUrl.matches("^https?://.+")) {
                 return ResponseEntity.status(HttpURLConnection.HTTP_BAD_REQUEST)
-                        .body(Map.of("status", "error", "message", "Invalid imageUrl format"));
+                        .body(Map.of(STATUS_KEY, "error", "message", "Invalid imageUrl format"));
             }
-            URL url = new URL(imageUrl);
-            HttpURLConnection connection = (HttpURLConnection) url.openConnection();
-            connection.setRequestMethod("GET");
-            connection.connect();
-
-            if (connection.getResponseCode() != HttpURLConnection.HTTP_OK) {
+            java.net.http.HttpClient client = java.net.http.HttpClient.newHttpClient();
+            java.net.http.HttpRequest request = java.net.http.HttpRequest.newBuilder()
+                    .uri(java.net.URI.create(imageUrl))
+                    .GET()
+                    .build();
+            java.net.http.HttpResponse<InputStream> response =
+                    client.send(request, java.net.http.HttpResponse.BodyHandlers.ofInputStream());
+            if (response.statusCode() != 200) {
                 return ResponseEntity.status(HttpURLConnection.HTTP_BAD_REQUEST)
-                        .body(Map.of("status", "error", "message", "Invalid imageUrl or unable to download image"));
+                        .body(Map.of(STATUS_KEY, "error", "message", "Invalid imageUrl or unable to download image"));
             }
-
             String fileExtension = imageUrl.substring(imageUrl.lastIndexOf('.'));
             imageName = code + fileExtension;
-            inputStream = connection.getInputStream();
+            try (InputStream is = response.body()) {
+                productService.uploadProductImage(code, imageName, is);
+            }
+            Map<String, String> responseMap = Map.of(STATUS_KEY, "success", "filename", imageName);
+            return ResponseEntity.ok(responseMap);
         }
 
         // Upload the image
         productService.uploadProductImage(code, imageName, inputStream);
 
-        Map<String, String> response = Map.of("status", "success", "filename", imageName);
+        Map<String, String> response = Map.of(STATUS_KEY, "success", "filename", imageName);
         return ResponseEntity.ok(response);
     }
 }
